examples/test/testpolicy7086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7086
  namespace: namespace236
spec:
  podSelector:
    matchLabels:
      key37: value24
      key30: value12
      key41: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value11
          key30: value39
      podSelector:
        matchLabels:
          key6: value16
          key31: value49
